fix: adjust file tree spacing for chromium

--- a/app/ui/editor/file-tree/file-tree.module.css
+++ b/app/ui/editor/file-tree/file-tree.module.css
@@ -39,7 +39,7 @@
 
 .fileTree > ul {
   padding: 1px 0;
-  padding-left: 1.3rem;
+  padding-left: 1.6rem;
   margin: 0;
   overflow-y: scroll;
 }
